# llamac

./: .gitignore  CHANGELOG.md  Makefile  README.md  llamac.cabal  stack.yaml
exe/: Main.hs
lexer/: Lexer.x
lexerPosn/: Lexer.x
repl/: Main.hs
repl/BackEnd/: Evaluation.hs  RunTimeLib.hs
repl/Common/: Interpreter.hs  Utils.hs  Value.hs
repl/FrontEnd/: FrontEnd.hs  ReplInput.hs
src/: Main.hs
src/Common/: AST.hs  PrintAST.hs  SymbolTable.hs  SymbolType.hs  Token.hs
src/Interpreter/: Interpreter.hs
src/Lexer/: Lexer.hs  Lexer.x
src/Parser/: Parser.y  ParserM.hs  ParserState.hs  Utils.hs
src/RunTime/: LibHeaders.hs
src/RunTimeLib/: LibHeaders.hs
src/Semantics/: Analyzer.hs  ExprAnalysis.hs  SemanticState.hs  Semantics.hs  TypeAnalysis.hs  Unifier.hs  Utils.hs
src/lexerMonad/: Lexer.x
test/: Tests.hs
test/Property/: ArbitraryAST.hs  PrintAST.hs  Property.hs  SemanticAST.hs  Utils.hs
test/Property/Lexer/: ArbitraryTokens.hs
test/Property/Parser/: ArbitraryAST.hs
test/Property/Semantics/: SemanticAST.hs
test/Unit/: SemanticTestSuites.hs  TestExpectations.hs  Unit.hs
test/Unit/Parser/: ExpectedASTs.hs
test/Unit/Semantics/: AnalyzedASTs.hs  SemanticTestSuites.hs
test/resources/: arrayMult.llama  binTrees.llama  bubbleSort.llama  hanoi.llama  hanoiType.llama  mean.llama  primes.llama  reverse.llama
test/resources/1000-llamas/: p43.lla  p9.lla
