cabal-version:       2.2

name:                llamac
version:             0.1.0.0
synopsis:            A compiler for the language llama implemented in Haskell
homepage:            https://github.com/gmagaf/llamac#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Gmagaf
maintainer:          example@example.com
copyright:           2025 Gmagaf
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
                     src/Lexer/Lexer.x
                     src/Parser/Parser.y

description:         A compiler for the language llama implemented in Haskell

source-repository head
  type:     git
  location: https://github.com/gmagaf/llamac.git

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  exposed-modules:    Lexer.Lexer
                      Parser.Parser
                      Parser.ParserM
                      Parser.ParserState
                      Parser.Utils
                      Common.Token
                      Common.AST
                      Common.PrintAST
                      Common.SymbolType
                      Common.SymbolTable
                      Semantics.SemanticState
                      Semantics.Semantics
                      Semantics.TypeAnalysis
                      Semantics.ExprAnalysis
                      Semantics.Utils
                      Semantics.Unifier
                      RunTime.LibHeaders
  build-depends:      base >= 4.7 && < 5,
                      array >= 0.4 && < 0.6,
                      transformers >= 0.5,
                      containers >= 0.4,
                      bytestring >= 0.11,
                      text >= 2.0,
                      pretty-simple >= 4.1
  build-tool-depends: alex:alex >= 3.3,
                      happy:happy >= 1.20
  ghc-options:        -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wmissing-export-lists
                      -Wmissing-home-modules
                      -Wpartial-fields
                      -Wredundant-constraints

executable llamac
  default-language:   Haskell2010
  hs-source-dirs:     exe
  main-is:            Main.hs
  build-depends:      base >= 4.7 && < 5,
                      llamac
  other-modules:
  ghc-options:        -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wmissing-export-lists
                      -Wmissing-home-modules
                      -Wpartial-fields
                      -Wredundant-constraints

test-suite test
 default-language:    Haskell2010
 hs-source-dirs:      test
 type:                exitcode-stdio-1.0
 main-is:             Tests.hs
 build-depends:       base >= 4.7 && < 5,
                      array >= 0.4 && < 0.6,
                      containers >= 0.4,
                      pretty-simple >= 4.1,
                      generic-random >=1.5,
                      QuickCheck >= 2.5,
                      hspec >= 2.10,
                      llamac
 other-modules:       Unit.Unit
                      Unit.Parser.ExpectedASTs
                      Unit.Semantics.SemanticTestSuites
                      Unit.Semantics.AnalyzedASTs
                      Property.Utils
                      Property.Property
                      Property.Lexer.ArbitraryTokens
                      Property.Parser.ArbitraryAST
                      Property.Semantics.SemanticAST
 ghc-options:         -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wmissing-export-lists
                      -Wmissing-home-modules
                      -Wpartial-fields
                      -Wredundant-constraints
